# resume-scorer-skill

./: .gitignore  INSTALL.md  README.md  SKILL.md  pyproject.toml
examples/: lihua_before_after.md
prompts/: classifier.md  scorer_jd.md  scorer_project.md  scorer_resume.md
skills/resume-scorer/: SKILL.md
skills/resume-scorer/agents/: openai.yaml
skills/resume-scorer/references/: output-contract.md  rubric.md
skills/resume-scorer/scripts/: score_resume.py
src/resume_scorer/: __init__.py  cli.py  models.py  scorer.py
tests/: test_repository.py  test_scorer.py
