[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "resume-scorer-skill"
version = "0.1.0"
description = "Bilingual resume, project, and JD scoring skill."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
resume-scorer = "resume_scorer.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
